[package]
name = "iplocation"
version = "0.1.1"
authors = ["Zevaryx <zevaryx@gmail.com>"]
edition = "2021"
description = "An iplocation.com wrapper written in Rust"
readme = "README.md"
repository = "https://github.com/zevaryx/iplocation-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
tokio = { version = "1.32.0", features = ["full"] }
